Fix dark mode code styling selector

--- a/_sass/defra-styles.scss
+++ b/_sass/defra-styles.scss
@@ -324,7 +324,7 @@ code {
   font-family: monospace;
 }
 
-[data-theme="dark"] code {
+[data-theme="dark"] pre code {
   color: #000000;
 }
 
